<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.CadastroActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto_activitycadastro"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/texto_nometelacadastro"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/texto_emailtelacadastro"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/texto_passwordtelacadastro"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_cadastro" />
</LinearLayout>